--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                   
                 <button>Sign up</button>
             </div>
-            <img class="image-one" src="/images/image_one.jpg" alt="random_image_one">
+            <img class="image-one" src="./images/image_one.jpg" alt="random_image_one">
 
         </div>
 
